# Earthquakepredictionengine

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: calibrate_noise.py  install_service.sh
src/eqengine/: __init__.py  config.py  main.py
src/eqengine/alerts/: __init__.py  dispatcher.py  manager.py  schema.py
src/eqengine/ingest/: __init__.py  ring_buffer.py  seedlink_client.py  udp_listener.py
src/eqengine/processing/: __init__.py  detector.py  magnitude.py  preprocessor.py
src/eqengine/telemetry/: __init__.py  health.py  rsam.py
src/eqengine/validation/: __init__.py  false_positive.py  ml_picker.py  noise_model.py
systemd/: eqengine.service
tests/: __init__.py  conftest.py  test_detector.py  test_dispatcher.py  test_false_positive.py  test_magnitude.py  test_ring_buffer.py
